[gd_scene load_steps=12 format=3 uid="uid://bs5mbjwnq55i5"]

[ext_resource type="Texture2D" uid="uid://b8ckh2nbdf7to" path="res://scenes/player/player.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://dfmfhckg3we2c" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://cie61pqni310o" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://dykt3xswr33r7" path="res://scenes/component/health_component.tscn" id="3_lvxji"]

[sub_resource type="Animation" id="Animation_p47bc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lvxji"]
resource_name = "walk"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(4.92458, 1, 6.72717, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(4.28709, 1, 10.5561, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75vfm"]
_data = {
&"RESET": SubResource("Animation_p47bc"),
&"walk": SubResource("Animation_lvxji")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p47bc"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gmlin"]
radius = 31.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p47bc"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_8afob"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_gmlin")]

[node name="HealthComponent" parent="." instance=ExtResource("3_lvxji")]
max_health = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_75vfm")
}

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_p47bc")

[node name="PickArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_gmlin")
debug_color = Color(0.831341, 0.262612, 0.730091, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(20, 6)
offset_left = -10.0
offset_top = -26.0
offset_right = 10.0
offset_bottom = -20.0
pivot_offset = Vector2(10, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_p47bc")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Visual" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visual"]
texture = ExtResource("1_8afob")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_8afob")

[node name="HurtIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_hurt_area_body_exited"]
[connection signal="timeout" from="HurtIntervalTimer" to="." method="_on_hurt_interval_timer_timeout"]
